# DataFusionContest2024_public_solution_churn

./: .gitignore  CB+XGB_Survival_Cox_basic_features.ipynb  README.md  build.py  objectives.py  objectives_slow.py  pyproject.toml  requirements.txt  submission_blend.csv
data_fusion_contest_2024_churn/ext/: objectives.pyx
